--- a/index.html
+++ b/index.html
@@ -7,9 +7,44 @@
   <link rel="stylesheet" href="Goabeach.css">
 </head>
 <body>
+  <header>
+    <div class="inquiries">
+      <div class="leftbox">
+        <div id="phoneno">
+          <img src="Top 10 beaches in Goa/phoneicon.png" alt="icon">
+          <p>Toll Free: <b>1000-000-000000</b> &nbsp;| &nbsp;</p>
+          <p>Timings: <b>7:00 AM - 8:30 PM</b></p>
+        </div>      
+      </div>
+      <div class="rightbox">
+        <p>> <a href="#">Tenders</a> &nbsp;| &nbsp;</p>
+        <p> <a href="#">EODB Services</a> &nbsp;| &nbsp;</p>
+        <img src="Top 10 beaches in Goa/schedule.png" alt="#" id="scheduleimg">
+        <p><a href="#">Manage Booking</a> &nbsp;| &nbsp;</p>
+        <img src="Top 10 beaches in Goa/lock.png" alt="icon" id="lock">
+        <p><a href="#">Login</a></p>
+      </div>
+    </div>
+    <div class="topnavbar">
+      <div id="goatourismlogo">
+        <img src="Top 10 beaches in Goa/Goa-tourismlogo.jpg" alt="goa">
+        <span><h2>Goa<br>Tourism</h2></span>
+      </div>
+      <div class="navlinks">
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Hotels</a>
+        <a href="">Banquets</a>
+        <a href="">Packages</a>
+        <a href="">Transport</a>
+        <a href="">River Cruise</a>
+        <a href="">Boating</a>
+        <a href="">More &#x25BC;</a>
+      </div>
+    </div>
+  </header>
   <div class="container">
     <div class="headerbox">
-      <header>
         <div id="maintitle">
           <h2>Most Visited Beaches in Goa</h2>
         </div>
@@ -17,7 +52,6 @@
           <p>
             Goa's beaches boast golden sands, swaying palms, and azure waters, inviting travelers to unwind and indulge. From the vibrant shores of Calangute and Baga to the tranquil retreats of Palolem and Agonda, each beach offers a unique ambiance and activities.</p>
         </div>
-      </header>
     </div>
     <main class="contentbox">
       <!--  Card 1 Starts Here -->  
@@ -301,5 +335,54 @@
       <!--  Card 8 Ends Here-->     
       </main>
   </div>
+  <footer>
+    <div class="topattractions">
+      <h2>Top Attractions</h2>
+      <div class="placelinks">
+        <ul>
+          <li><a href="#"> Dudhsagar Falls</a></li>
+          <li><a href="#"> Basilica of Bom Jesus</a></li>
+          <li><a href="#"> Aguada Fort</a></li>
+          <li><a href="#"> Chapoda Fort</a></li>
+          <li><a href="#"> Mollem National Park & Bhagwan Mahavir Wildlife Sanctuary</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="hotelbookings">
+      <h2>Manage Bookings</h2>
+      <div class="bookinglinks">
+        <ul>
+          <li><a href="#">Hotel Booking Cancellations</a></li>
+          <li><a href="#">Hotel Reschedule</a></li>
+          <li><a href="#">Hotel Booking Duplicate Ticket</a></li>
+          <li><a href="#">Package Booking Cancellation</a></li>
+          <li><a href="#">Package Reschedule</a></li>
+          <li><a href="#">Package Duplicate Ticket</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="usefullinks">
+      <h2>Useful Links</h2>
+      <ul>
+        <li><a href="#">NIDHI</a></li>
+        <li><a href="#">Saathi</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms & Conditions</a></li>
+        <li><a href="#">Cancellation & Refund Policy</a></li>
+        <li><a href="#">Contact Info</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </div>
+    <div class="contactinfo">
+      <h2>Contact Info</h2>
+      <div class="contactdetails">
+        <p>Address: 22/7, Hyderabad, Telangana</p>
+        <a href="tel:+123456789">Ph no:999-999-999</a>
+        <a href="mailto:goatourism@gmail.com">
+        Email: Goatourism@gmail.com</a>
+        <a href="goatourism.in">Website: Goatourism.in</a>
+      </div>  
+    </div>
+  </footer>
 </body>
 </html>
